# agentic-dag

./: .gitignore  ARCHITECTURE.md  README.md  package.json  start.sh
api/: .env.example  main.py  models.py  pyproject.toml
api/agent/: classify.py
api/alembic/: env.py
api/alembic/versions/: d4ad5e0000b8_dag_schema.py
api/config/: db.py
api/engine/: executor.py  graph.py  handlers.py  mocks.py  registry.py  schemas.py  seed.py  store.py
api/routers/: deps.py  runs.py
api/seeds/: support_graph.json
api/tests/: conftest.py  helpers.py  test_agent.py  test_api.py  test_executor.py  test_graph.py  test_handlers.py  test_scenarios.py  test_store.py
client/src/app/: layout.tsx  page.tsx
client/src/lib/: api.ts
docs/: HLD.md  LLD.md  SPEC.md  code-flow-report.html  flow.md
docs/plans/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md
