[project]
name = "backrooms-server"
version = "0.1.0"
description = "Initial FastAPI backend scaffold"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "alembic>=1.14",
    "groq>=1.5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
]

[tool.uv]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
